Spacing fix?

--- a/css/standard.css
+++ b/css/standard.css
@@ -45,7 +45,7 @@ div#overlay {
 
 .bigtext {
   position: absolute;
-    top: -70;
+    top: -60;
     left: 0;
     bottom: 0;
     right: 0;
